première version complete

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 
+  <link rel="stylesheet" type="text/css" href="scss/grayscale.scss"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
@@ -28,7 +29,10 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">ReducShare</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <img alt="logo" class="image-logo" src="img/icon-reducshare-512x512.png">
+        &nbsp;ReducShare
+      </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -39,10 +43,10 @@
             <a class="nav-link js-scroll-trigger" href="#about">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Application</a>
+            <a class="nav-link js-scroll-trigger" href="#projects">Fonctionnement</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#signup">Utiliser</a>
           </li>
         </ul>
       </div>
@@ -54,23 +58,26 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">ReducShare</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Récupérer des promotions et augmenter leur montant en les distribuant</h2>
-        <br><br><a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
+        <br>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">Le marketing viral à destination du commerce de proximité et des petites entreprises</h2>
+        <br><br><a href="#about" class="btn btn-primary js-scroll-trigger">Start</a>
       </div>
     </div>
   </header>
 
-  <!-- About Section -->
+  <!-- Teaser Section -->
   <section id="about" class="about-section text-center">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">Transformer vos clients en vendeurs</h2>
           <p class="text-white-50">
-            ReducShare vous permet de construire une promotion pour votre produit ou service en quelques clics; puis de la diffuser à vos clients ou amis.
+            Grâce a ReducShare vous fabriquer une promotion en quelques clics,
+            vous la difuser mais surtout
+            vos clients la redifuse pour augmenter leur avantage !
         </div>
       </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
+      <img src="img/iphone.png" class="img-fluid" alt="">
     </div>
   </section>
 
@@ -78,30 +85,64 @@
   <section id="projects" class="projects-section bg-light">
     <div class="container">
 
-      <!-- Featured Project Row -->
+      <!-- Featured Project Row
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
           <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4>Shoreline</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+            <h4>1. Vous créer votre promotion</h4>
+            <p class="text-black-50 mb-0">
+              En quelques clics vous fixer les conditions, les gains, le stocks réservé à la promo.
+              Vous avez le contrôle total. Puis vous l'afficher ou le partager à votre réseau
+            </p>
           </div>
         </div>
+      </div>
+      -->
+
+
+      <!-- Featured Project Row
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+        <div class="col-xl-4 col-lg-5">
+          <div class="featured-text text-center text-lg-left">
+            <h4>2. Votre promotion se diffuse</h4>
+            <p class="text-black-50 mb-0">
+              Vos clients recoivent la promotion. Avant de l'utiliser ils l'a transmetent à leur tour
+              pour augmenter leur avantage. Ainsi en rapidement vous toucher plusieurs centaines de
+              clients potentiels. Vous êtes informé en temps réel de la diffusion de votre promotion.
+            </p>
+          </div>
+        </div>
+        <div class="col-xl-8 col-lg-7">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
+        </div>
+      </div>
+      -->
+      <div class="row">
+        <div class="col-lg-8 mx-auto text-center">
+          <h2 class="mb-4">Comment ça marche ?</h2>
+          <br>
+        </div>
+
       </div>
 
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+          <img class="img-fluid" src="img/rabais.jpg" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Misty</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <h4 class="text-white">Vous créer votre promotion</h4>
+                <p class="mb-0 text-white-50">
+                  En quelques clics vous fixer les conditions, les gains,
+                  le stocks réservé à la promotion (des cafés offerts, un pourcentage du prix de vente).
+                  Vous avez le contrôle total. <br>Puis vous l'afficher ou la partager à votre réseau
+                </p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -110,16 +151,20 @@
       </div>
 
       <!-- Project Two Row -->
-      <div class="row justify-content-center no-gutters">
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0 ">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+          <img class="img-fluid" src="img/metro.jpg" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Mountains</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                <h4 class="text-white">Votre promotion se diffuse</h4>
+                <p class="mb-0 text-white-50">
+                  Vos clients recoivent la promotion. Avant de l'utiliser ils l'a transmetent à leur tour
+                  pour augmenter leur avantage. Rapidement vous touchez plusieurs centaines de
+                  clients potentiels. Vous suivez la diffusion en temps réel.
+                </p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -127,21 +172,41 @@
         </div>
       </div>
 
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/money2.jpg" alt="">
+        </div>
+        <div class="col-lg-6">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h4 class="text-white">Vos clients utilisent la promotion</h4>
+                <p class="mb-0 text-white-50">
+                  Vous flasher simplement leur téléphone pour connaitre le montant de leur avantage.
+                  Immédiatement le stock est remis a jour et la promotion s'arrête dés que la limite
+                  que vous aviez fixé est atteinte. Vous garder le contrôle du processus du début à la
+                  fin.
+                </p>
+                <hr class="d-none d-lg-block mb-0 ml-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
   <!-- Signup Section -->
   <section id="signup" class="signup-section">
-    <div class="container">
+    <div class="container text-center">
       <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto text-center">
 
-          <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-          <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
+          <br>
+          <h2 class="text-white mb-5">N'attendez plus, essayez ReducShare maintenant</h2>
 
           <form class="form-inline d-flex">
-            <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
-            <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
+            <button type="submit" class="btn btn-primary mx-auto">Start</button>
           </form>
 
         </div>
@@ -159,9 +224,9 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Address</h4>
+              <h4 class="text-uppercase m-0">Addresse</h4>
               <hr class="my-4">
-              <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+              <div class="small text-black-50">12 rue Martel, Paris 10</div>
             </div>
           </div>
         </div>
@@ -170,10 +235,10 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-envelope text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Email</h4>
+              <h4 class="text-uppercase m-0">Contact</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">hello@yourdomain.com</a>
+                <a href="#">contact@reducshare.com</a>
               </div>
             </div>
           </div>
@@ -193,13 +258,13 @@
 
       <div class="social d-flex justify-content-center">
         <a href="#" class="mx-2">
-          <i class="fab fa-twitter"></i>
+          <i class="fab fa-weebly"></i>
         </a>
         <a href="#" class="mx-2">
           <i class="fab fa-facebook-f"></i>
         </a>
         <a href="#" class="mx-2">
-          <i class="fab fa-github"></i>
+          <i class="fab fa-forumbee"></i>
         </a>
       </div>
 
@@ -209,7 +274,7 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; Your Website 2019
+      Copyright &copy; ReducShare 2019
     </div>
   </footer>
 
