--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <img alt="logo" class="image-logo" src="img/icon-reducshare-512x512.png">
+        <img alt="logo" class="image-logo" src="img/icon-128x128.png">
         &nbsp;ReducShare
       </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
