--- a/index.html
+++ b/index.html
@@ -217,7 +217,10 @@
           <h2 class="text-white mb-5">N'attendez plus, essayez ReducShare maintenant</h2>
 
           <form class="form-inline d-flex">
-            <button type="submit" class="btn btn-primary mx-auto">Start</button>
+            <button class="btn btn-primary mx-auto"
+                    onclick="javascript:open('https://reducshare.com')">
+              Start
+            </button>
           </form>
 
         </div>
@@ -258,10 +261,12 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-mobile-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Phone</h4>
+              <i class="fas fa-sitemap text-primary mb-2"></i>
+              <h4 class="text-uppercase m-0">Editeur</h4>
               <hr class="my-4">
-              <div class="small text-black-50">+1 (555) 902-8832</div>
+              <div class="small text-black-50">
+                <a href="https://f80.fr">F80</a>
+              </div>
             </div>
           </div>
         </div>
@@ -271,10 +276,10 @@
         <a href="#" class="mx-2">
           <i class="fab fa-weebly"></i>
         </a>
-        <a href="#" class="mx-2">
+        <a href="https://www.facebook.com/reducshare/" class="mx-2">
           <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="#" class="mx-2">
+        <a href="https://reducshare.les-forums.com" class="mx-2">
           <i class="fab fa-forumbee"></i>
         </a>
       </div>
