--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">ReducShare</h1>
-        <br>
+        <br><br>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">Le marketing viral à destination du commerce de proximité et des petites entreprises</h2>
         <br><br><a href="#about" class="btn btn-primary js-scroll-trigger">Start</a>
       </div>
@@ -86,6 +86,8 @@
             Grâce a ReducShare vous fabriquer une promotion en quelques clics,
             vous la difuser mais surtout
             vos clients la redifuse pour augmenter leur avantage !
+            <br>Rapidement vous touchez plusieurs centaines de
+            clients potentiels
         </div>
       </div>
       <img src="img/iphone.png" class="img-fluid" alt="">
@@ -148,11 +150,11 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Vous créer votre promotion</h4>
+                <h4 class="text-white">Vous créez votre promotion</h4>
                 <p class="mb-0 text-white-50">
-                  En quelques clics vous fixer les conditions, les gains,
-                  le stocks réservé à la promotion (des cafés offerts, un pourcentage du prix de vente).
-                  Vous avez le contrôle total. <br>Puis vous l'afficher ou la partager à votre réseau
+                  En quelques clics vous fixer les conditions, le gain maximum par réduction,
+                  le stock réservé à la promotion (des cafés offerts, un pourcentage du prix de vente).
+                  <br>Puis vous l'afficher ou la partager à votre réseau.
                 </p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
@@ -170,11 +172,12 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Votre promotion se diffuse</h4>
+                <h4 class="text-white">La diffusion commence</h4>
                 <p class="mb-0 text-white-50">
-                  Vos clients recoivent la promotion. Avant de l'utiliser ils l'a transmetent à leur tour
-                  pour augmenter leur avantage. Rapidement vous touchez plusieurs centaines de
-                  clients potentiels. Vous suivez la diffusion en temps réel.
+                  Vos clients recoivent la promotion. Plutôt que l'utiliser directement,
+                  ils l'a diffuse à leur tour
+                  pour augmenter leur avantage.<br>
+                  Vous suivez la diffusion en temps réel. Vous pouvez l'interrompre à tout moment
                 </p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
@@ -191,12 +194,12 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Vos clients utilisent la promotion</h4>
+                <h4 class="text-white">Les clients viennent acheter</h4>
                 <p class="mb-0 text-white-50">
-                  Vous flasher simplement leur téléphone pour connaitre le montant de leur avantage.
+                  Au moment de l'achat, vous flasher simplement leur téléphone pour connaitre
+                  le montant de leur avantage.<br>
                   Immédiatement le stock est remis a jour et la promotion s'arrête dés que la limite
-                  que vous aviez fixé est atteinte. Vous garder le contrôle du processus du début à la
-                  fin.
+                  que vous aviez fixé est atteinte.
                 </p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
@@ -218,7 +221,7 @@
 
           <form class="form-inline d-flex">
             <button class="btn btn-primary mx-auto"
-                    onclick="javascript:open('https://reducshare.com')">
+                    onclick="openAppli()">
               Start
             </button>
           </form>
@@ -305,5 +308,11 @@
   <script src="js/grayscale.min.js"></script>
 
 </body>
+
+<script>
+  function openAppli(){
+    window.open('https://reducshare.com');
+  }
+</script>
 
 </html>
