Website of ReducShare

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <img alt="logo" class="image-logo" src="img/icon-128x128.png">
-        &nbsp;ReducShare
+        &nbsp;
+        <span class="text-capitalize">REDUCSHARE</span>
       </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
@@ -71,7 +72,7 @@
         <h1 class="mx-auto my-0 text-uppercase">ReducShare</h1>
         <br><br>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">Le marketing viral à destination du commerce de proximité et des petites entreprises</h2>
-        <br><br><a href="#about" class="btn btn-primary js-scroll-trigger">Start</a>
+        <br><br><a href="#about" class="btn btn-primary js-scroll-trigger">Commencer</a>
       </div>
     </div>
   </header>
@@ -81,22 +82,30 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Transformer vos clients en vendeurs</h2>
+          <h2 class="text-white mb-4">L'appli qui transforme vos clients en vendeurs</h2>
           <p class="text-white-50">
-            Grâce a ReducShare vous fabriquer une promotion en quelques clics,
+            Grâce à REDUCSHARE vous fabriquez une promotion en quelques clics,
             vous la difuser mais surtout
-            vos clients la redifuse pour augmenter leur avantage !
-            <br>Rapidement vous touchez plusieurs centaines de
+            <strong>vos clients la redifuse</strong> pour augmenter leur avantage !
+            <br><br>Rapidement vous touchez plusieurs centaines de
             clients potentiels
         </div>
       </div>
-      <img src="img/iphone.png" class="img-fluid" alt="">
+      <img src="img/capture3.png" style="width:90%;max-height: 500px;margin-bottom:50px;" class="img-fluid" alt="">
     </div>
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="projects-section bg-light">
+  <section id="projects" class="projects-section bg-dark text-light">
+
     <div class="container">
+
+      <div class="row">
+        <div class="col-lg-8 mx-auto text-center">
+          <h2 class="mb-4">Comment ça marche ?</h2>
+          <br>
+        </div>
+      </div>
 
       <!-- Featured Project Row
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
@@ -133,13 +142,7 @@
         </div>
       </div>
       -->
-      <div class="row">
-        <div class="col-lg-8 mx-auto text-center">
-          <h2 class="mb-4">Comment ça marche ?</h2>
-          <br>
-        </div>
 
-      </div>
 
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
@@ -177,7 +180,7 @@
                   Vos clients recoivent la promotion. Plutôt que l'utiliser directement,
                   ils l'a diffuse à leur tour
                   pour augmenter leur avantage.<br>
-                  Vous suivez la diffusion en temps réel. Vous pouvez l'interrompre à tout moment
+                  <br>Vous suivez la diffusion en temps réel. Vous pouvez l'interrompre à tout moment
                 </p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
@@ -197,9 +200,8 @@
                 <h4 class="text-white">Les clients viennent acheter</h4>
                 <p class="mb-0 text-white-50">
                   Au moment de l'achat, vous flasher simplement leur téléphone pour connaitre
-                  le montant de leur avantage.<br>
-                  Immédiatement le stock est remis a jour et la promotion s'arrête dés que la limite
-                  que vous aviez fixé est atteinte.
+                  le montant de leur avantage.<br><br>
+                  Immédiatement le stock est remis à jour et la promotion s'arrête dés que la limite est atteinte.
                 </p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
@@ -220,9 +222,8 @@
           <h2 class="text-white mb-5">N'attendez plus, essayez ReducShare maintenant</h2>
 
           <form class="form-inline d-flex">
-            <button class="btn btn-primary mx-auto"
-                    onclick="openAppli()">
-              Start
+            <button class="btn btn-primary mx-auto" onclick="openAppli()">
+              Commencer
             </button>
           </form>
 
@@ -286,6 +287,7 @@
           <i class="fab fa-forumbee"></i>
         </a>
       </div>
+      <br>
 
     </div>
   </section>
