--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             Grâce à REDUCSHARE vous fabriquez une promotion en quelques clics,
             vous la difuser mais surtout
             <strong>vos clients la redifuse</strong> pour augmenter leur avantage !
-            <br><br>Rapidement vous touchez plusieurs centaines de
+            <br><br><br><br>Rapidement vous touchez plusieurs centaines de
             clients potentiels
         </div>
       </div>
@@ -107,41 +107,6 @@
         </div>
       </div>
 
-      <!-- Featured Project Row
-      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-        <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
-        </div>
-        <div class="col-xl-4 col-lg-5">
-          <div class="featured-text text-center text-lg-left">
-            <h4>1. Vous créer votre promotion</h4>
-            <p class="text-black-50 mb-0">
-              En quelques clics vous fixer les conditions, les gains, le stocks réservé à la promo.
-              Vous avez le contrôle total. Puis vous l'afficher ou le partager à votre réseau
-            </p>
-          </div>
-        </div>
-      </div>
-      -->
-
-
-      <!-- Featured Project Row
-      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-        <div class="col-xl-4 col-lg-5">
-          <div class="featured-text text-center text-lg-left">
-            <h4>2. Votre promotion se diffuse</h4>
-            <p class="text-black-50 mb-0">
-              Vos clients recoivent la promotion. Avant de l'utiliser ils l'a transmetent à leur tour
-              pour augmenter leur avantage. Ainsi en rapidement vous toucher plusieurs centaines de
-              clients potentiels. Vous êtes informé en temps réel de la diffusion de votre promotion.
-            </p>
-          </div>
-        </div>
-        <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
-        </div>
-      </div>
-      -->
 
 
       <!-- Project One Row -->
@@ -154,10 +119,11 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Vous créez votre promotion</h4>
+                <br>
                 <p class="mb-0 text-white-50">
-                  En quelques clics vous fixer les conditions, le gain maximum par réduction,
+                  En quelques clics vous fixez les conditions, le gain maximum par réduction,
                   le stock réservé à la promotion (des cafés offerts, un pourcentage du prix de vente).
-                  <br>Puis vous l'afficher ou la partager à votre réseau.
+                  <br><br>Puis vous l'afficher ou la partager à votre réseau.
                 </p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
@@ -176,11 +142,12 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">La diffusion commence</h4>
+                <br>
                 <p class="mb-0 text-white-50">
                   Vos clients recoivent la promotion. Plutôt que l'utiliser directement,
-                  ils l'a diffuse à leur tour
+                  ils l'envoi à leur tour
                   pour augmenter leur avantage.<br>
-                  <br>Vous suivez la diffusion en temps réel. Vous pouvez l'interrompre à tout moment
+                  <br>Vous suivez sa diffusion en temps réel. Vous pouvez l'interrompre à tout moment
                 </p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
@@ -198,6 +165,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Les clients viennent acheter</h4>
+                <br>
                 <p class="mb-0 text-white-50">
                   Au moment de l'achat, vous flasher simplement leur téléphone pour connaitre
                   le montant de leur avantage.<br><br>
@@ -242,9 +210,12 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Addresse</h4>
+              <h4 class="text-uppercase m-0">Edition</h4>
               <hr class="my-4">
-              <div class="small text-black-50">12 rue Martel, Paris 10</div>
+              <div class="small text-black-50">
+                ReducShare est développé et édité par F80,
+                12 rue Martel, Paris 10
+              </div>
             </div>
           </div>
         </div>
@@ -266,10 +237,10 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-sitemap text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Editeur</h4>
+              <h4 class="text-uppercase m-0">Mentions légales</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="https://f80.fr">F80</a>
+                <a href="https://f80.fr">CGU</a>
               </div>
             </div>
           </div>
