--- a/index.html
+++ b/index.html
@@ -107,8 +107,6 @@
         </div>
       </div>
 
-
-
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
@@ -180,8 +178,10 @@
     </div>
   </section>
 
+
+
   <!-- Signup Section -->
-  <section id="signup" class="signup-section">
+  <section id="signupsection" class="signup-section">
     <div class="container text-center">
       <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto text-center">
@@ -200,8 +200,29 @@
     </div>
   </section>
 
+
+  <!-- Signup Section -->
+  <section id="signup" class="ensavoirplus-section">
+    <div class="container text-center">
+      <h4 class="text-uppercase m-0 text-light">En savoir plus</h4>
+      <br><br><br>
+      <div class="row" style="height:400px;">
+
+        <div class="col-md-10 col-lg-8 mx-auto text-center">
+          <iframe style="width:100%;height:100%;" frameborder="0"
+                  src="https://mega.nz/embed#!MGJhHaAb!KOTiazcMQbL82-gVRrMLsy33cpGEXBnGH5cU_T65uTk"
+                  allowfullscreen>
+          </iframe>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+
   <!-- Contact Section -->
-  <section class="contact-section bg-black">
+  <section class="contact-section bg-secondary">
     <div class="container">
 
       <div class="row">
@@ -264,7 +285,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-black small text-center text-white-50">
+  <footer class="bg-secondary small text-center text-white-50">
     <div class="container">
       Copyright &copy; ReducShare 2019
     </div>
