--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       <div class="row" style="height:400px;">
 
         <div class="col-md-10 col-lg-8 mx-auto text-center">
-          <iframe style="width:100%;height:100%;" frameborder="0"
+          <iframe style="width:100%;height:auto;" frameborder="0"
                   src="https://mega.nz/embed#!MGJhHaAb!KOTiazcMQbL82-gVRrMLsy33cpGEXBnGH5cU_T65uTk"
                   allowfullscreen>
           </iframe>
