première version complete

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
               <h4 class="text-uppercase m-0">Edition</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                ReducShare est développé et édité par F80,
+                ReducShare est développée et éditée par F80,
                 12 rue Martel, Paris 10
               </div>
             </div>
