--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149843481-1"></script>
+  <script async src="js/main.min.js"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -32,7 +33,7 @@
     gtag('config', 'UA-149843481-1');
   </script>
 
-  <script src="js/main.js"></script>
+
 
 </head>
 
