Website of ReducShare

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             clients potentiels
         </div>
       </div>
-      <img src="img/capture3.png" style="width:90%;max-height: 500px;margin-bottom:50px;" class="img-fluid" alt="">
+      <img src="img/capture3.png" style="width:90%;max-width:450px;max-height: 500px;margin-bottom:50px;" class="img-fluid" alt="">
     </div>
   </section>
 
@@ -318,7 +318,7 @@
   function run(){
       setTimeout(function(){
           start()
-      },1000);
+      },500);
   }
 </script>
 
