--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149843481-1"></script>
-  <script async src="js/main.min.js"></script>
+
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -310,14 +310,17 @@
 
 </body>
 
+<script src="js/main.min.js"></script>
+
 <script>
+
   function openAppli(){
     window.open('https://reducshare.com');
   }
 
   function run(){
       setTimeout(function(){
-          start()
+          start();
       },500);
   }
 </script>
