--- a/index.html
+++ b/index.html
@@ -164,12 +164,13 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Les clients viennent acheter</h4>
+                <h4 class="text-white">Les clients utilisent leur réduction</h4>
                 <br>
                 <p class="mb-0 text-white-50">
                   Au moment de l'achat, vous flasher simplement leur téléphone pour connaitre
                   le montant de leur avantage.<br><br>
-                  Immédiatement le stock est remis à jour et la promotion s'arrête dés que la limite est atteinte.
+                  Immédiatement le stock est remis à jour et
+                  la promotion s'arrête dés que la limite est atteinte.
                 </p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
@@ -209,10 +210,13 @@
       <h4 class="text-uppercase m-0 text-light">En savoir plus</h4>
       <br><br>
       <span class="text-light">
-      Des exemples de modèles de promotions
+      ReducShare permet de fabriquer rapidement de nombreux types de promotions.
+        Voici quelques exemples qui peuvent être directement utilisés dans l'application.
       </span>
 
-      <div id="zoneModels" class="text-light text-left"></div>
+      <div id="zoneModels"
+           class="text-light text-left"
+           ></div>
       <br><br>
       <div class="row" style="height:400px;">
         <div class="col-md-10 col-lg-8 mx-auto text-center">
@@ -314,14 +318,15 @@
 
 <script>
 
+  var tags="";
+
   function openAppli(){
-    window.open('https://reducshare.com');
+    window.open("https://reducshare.com/?tags="+tags);
   }
 
   function run(){
-      setTimeout(function(){
-          start();
-      },500);
+    tags=getParam()["tags"];
+    getModels(tags);
   }
 </script>
 
