première version complete

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">ReducShare</h1>
         <br><br>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Le marketing viral à destination du commerce de proximité et des petites entreprises</h2>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">
+          Le marketing viral à destination des indépendants, du commerce de proximité et des TPE/PME
+        </h2>
         <br><br><a href="#about" class="btn btn-primary js-scroll-trigger">Commencer</a>
       </div>
     </div>
@@ -167,7 +169,7 @@
                 <h4 class="text-white">Les clients utilisent leur réduction</h4>
                 <br>
                 <p class="mb-0 text-white-50">
-                  Au moment de l'achat, vous flasher simplement leur téléphone pour connaitre
+                  Au moment de l'achat, vous flashez simplement leur téléphone pour connaitre
                   le montant de leur avantage.<br><br>
                   Immédiatement le stock est remis à jour et
                   la promotion s'arrête dés que la limite est atteinte.
