--- a/index.html
+++ b/index.html
@@ -84,10 +84,14 @@
   <!-- Teaser Section -->
   <section id="about" class="about-section text-center">
     <div class="container">
-      <div class="row">
+      <div class="row text-light">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">L'appli qui transforme vos clients en vendeurs</h2>
-          <p class="text-white-50">
+          <h2 class="mb-4">L'appli qui transforme vos clients en vendeurs</h2>
+          <br>
+
+          <hr class="d-none d-lg-block" style="width:40%;border:#0f6674 solid 2px;">
+          <br><br>
+          <p>
             Grâce à REDUCSHARE vous fabriquez une promotion en quelques clics,
             vous la difuser mais surtout
             <strong>vos clients la redifuse</strong> pour augmenter leur avantage !
