--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
               <h4 class="text-uppercase m-0">Contact</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">contact@reducshare.com</a>
+                <a href="mailto:contact@reducshare.com">Contacter</a>
               </div>
             </div>
           </div>
@@ -278,7 +278,7 @@
               <h4 class="text-uppercase m-0">Mentions légales</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="https://f80.fr">CGU</a>
+                <a href="https://reducshare.com/cgu.html" target="_blank">CGU</a>
               </div>
             </div>
           </div>
