--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <div class="col-md-10 col-lg-8 mx-auto text-center">
 
           <br>
-          <h2 class="text-white mb-5">N'attendez plus, essayez ReducShare maintenant</h2>
+          <h2 class="text-white mb-5">N'attendez plus ! Fabriquez une première promotion, maintenant</h2>
 
           <form class="form-inline d-flex">
             <button class="btn btn-primary mx-auto" onclick="openAppli()">
@@ -327,7 +327,7 @@
   var tags="";
 
   function openAppli(){
-    window.open("https://reducshare.com/?tags="+tags);
+    window.open("https://reducshare.com/?tags="+tags+"&command=add_promo");
   }
 
   function run(){
