--- a/faq.html
+++ b/faq.html
@@ -37,7 +37,7 @@
 
 <body id="page-top" onload="run()">
 
-
+<h1>Questions fréquentes</h1>
 <!--Accordion wrapper-->
 <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
 
