--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
             <a class="nav-link js-scroll-trigger" href="#projects">Fonctionnement</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup">Utiliser</a>
+            <a class="nav-link js-scroll-trigger" href="#startsection">Démarrer</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#ensavoirplus">En savoir plus</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contactsection">Contacts</a>
           </li>
         </ul>
       </div>
@@ -190,7 +196,7 @@
 
 
   <!-- Signup Section -->
-  <section id="signupsection" class="signup-section">
+  <section id="startsection" class="signup-section">
     <div class="container text-center">
       <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto text-center">
@@ -211,7 +217,7 @@
 
 
   <!-- Signup Section -->
-  <section id="signup" class="ensavoirplus-section" >
+  <section id="ensavoirplus" class="ensavoirplus-section" >
     <div class="container text-center">
       <h4 class="text-uppercase m-0 text-light">En savoir plus</h4>
       <br><br>
@@ -239,7 +245,7 @@
 
 
   <!-- Contact Section -->
-  <section class="contact-section bg-secondary">
+  <section class="contact-section bg-secondary" id="contactsection">
     <div class="container">
 
       <div class="row">
