Website of ReducShare

--- a/index.html
+++ b/index.html
@@ -225,10 +225,11 @@
       ReducShare permet de fabriquer rapidement de nombreux types de promotions.
         Voici quelques exemples qui peuvent être directement utilisés dans l'application.
       </span>
-
+      <br>
+      <hr class="d-none d-lg-block" style="width:40%;border:#0f6674 solid 2px;">
       <div id="zoneModels"
-           class="text-light text-left"
-           ></div>
+           class="text-light text-left">
+      </div>
       <br><br>
       <div class="row" style="height:400px;">
         <div class="col-md-10 col-lg-8 mx-auto text-center">
