ajout de robots.txt et sitemap.xml

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
   var tags="";
 
   function openAppli(){
-    window.open("https://reducshare.com/?tags="+tags+"&command=add_promo");
+    window.open("https://reducshare.com/?tags="+tags+"&command=add_shop,add_promo()");
   }
 
   function run(){
