ajout de robots.txt et sitemap.xml

--- a/faq.html
+++ b/faq.html
@@ -86,19 +86,20 @@
       <div class="card-body">
         ReducShare permet à des vendeurs de fabriquer en quelques clics des
         réductions dont le montant augmente à chaque fois qu’elles sont repartagées par les clients.
+          Ainsi ReducShare permet,
 
-        Les bénéfices sont :
-        <table>
-          <tr>
-            <th>Pour un acheteur</th>
-            <th>Pour un vendeur</th>
-          </tr>
-          <tr>
-            <td>
-              de profiter de promotions dont la valeur peut augmenter
-              de trouver les reductions de son quartier et de recevoir automatiquement celles de ses enseignes préférées
-            </td>
-            <td>
+        <br><br>
+
+          <strong>Pour un acheteur:</strong><br>
+        <ul>
+
+          <li>de profiter de promotions dont la valeur peut augmenter</li>
+        <li>de trouver les reductions de son quartier et de recevoir
+          automatiquement celles de ses enseignes préférées</li>
+
+        </ul>
+
+          <strong>Pour un vendeur:</strong><br>
               <ul>
                 <li>de fabriquer des promotions en quelques clics,</li>
                 <li>de contrôler le coût des promotions : gestion du stock réservé à la promotion, interruption de la diffusion, fermeture prématuré de la promotion</li>
@@ -107,9 +108,7 @@
                 <li>de fidéliser ses clients via le système d’abonnement,</li>
                 <li>de pouvoir faire des promotions flash, sur des durées courtes</li>
               </ul>
-            </td>
-          </tr>
-        </table>
+
       </div>
     </div>
 
