--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
       <h4 class="text-uppercase m-0 text-light">En savoir plus</h4>
       <br><br>
       <span class="text-light">
-      ReducShare permet de fabriquer rapidement de nombreux types de promotions.
-        Voici quelques exemples qui peuvent être directement utilisés dans l'application.
+      ReducShare permet de fabriquer rapidement de nombreux types de promotions.<br>
+        Voici quelques exemples que vous pouvez personnaliser et tester dés maintenant !
       </span>
       <br><br>
       <hr class="d-none d-lg-block" style="width:40%;border:#0f6674 solid 2px;">
@@ -240,6 +240,15 @@
         </div>
       </div>
     </div>
+
+      <hr class="d-none d-lg-block" style="width:40%;border:#0f6674 solid 2px;">
+      <br>
+      <div class="container text-center">
+      <h4 class="mb-4">
+          Vous pouvez également consulter les <br>
+          <a href="./faq.html">Questions Fréquentes</a>
+      </h4>
+      </div>
   </section>
 
 
