--- a/faqs/build_promo.html
+++ b/faqs/build_promo.html
@@ -3,15 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="scss/grayscale.scss"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Custom styles for this template -->
+    <link href="css/grayscale.min.css" rel="stylesheet">
+
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+
 </head>
-<body>
+<body style="font-family: Nunito;letter-spacing: .0625em;">
 Pour lancer une promotion il faut avoir créer au moins un établissement avant
 (car la promotion est, rattaché à l'établissement).<br>
 Depuis l'établissement on ajoute la promotion.
 On peut soit partir des valeurs par défaut, soit choisir un modèle.<br>
 Les valeurs à saisir sont regroupées en 5 sections.Une fois la promotion validée, celle-ci apparait dans la section de l'établissement<br>
 
-Consulter le tuto suivant pour en savoir plus :<br>
+<br><br>Consulter le tuto suivant pour en savoir plus :<br>
 
 </body>
 </html>
