Website of ReducShare

--- a/faq.html
+++ b/faq.html
@@ -109,6 +109,12 @@
                 <li>de pouvoir faire des promotions flash, sur des durées courtes</li>
               </ul>
 
+          <br>
+          Pour en savoir plus :<br>
+          <iframe style="display:inline-block;width:80vmin;height:45vmin;" frameborder="0"
+                  src="https://mega.nz/embed#!MGJhHaAb!KOTiazcMQbL82-gVRrMLsy33cpGEXBnGH5cU_T65uTk"
+                  allowfullscreen>
+          </iframe>
       </div>
     </div>
 
